[metadata]
name = pyilint
version = 0.1.0
author = InterlockLedger Network
author_email = fjtc@brokenbits.com.br
description = Pure Python implementation of InterlockLedger ILInt standard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/interlockledger/pyilint
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
